[package]
name = "passwordmaker-rs"
version = "0.1.0"
edition = "2018"
authors = ["Andreas Grois"]
rust-version = "1.52"
description = "Rust reimplementation of the PasswordMaker Pro algorithm. This project is not directly associated with PasswordMaker Pro."
repository = "https://github.com/soulsource/passwordmaker-rs"
# License is LGPL, because original PasswordMaker Pro is LPGL too.
license = "LGPL-3.0-or-later"
keywords = ["password", "crypto", "password-generator", "security"]
categories = ["cryptography"]

[dependencies]
unicode-segmentation = "1.10.0"

[dev-dependencies]
strum = "0.24"
strum_macros = "0.24"