[package]
name = "passwordmaker-rs"
version = "0.1.0"
edition = "2018"
authors = ["Andreas Grois"]
rust-version = "1.52"
description = "Rust reimplementation of the PasswordMaker Pro algorithm. This is partially a port, partially written from scratch. Compatibility is a goal, but not guaranteed." 
repository = "https://github.com/soulsource/passwordmaker-rs"
# License is LGPL, because original PasswordMaker Pro is LPGL too.
license = "LGPL-3.0-or-later"
keywords = ["password", "crypto", "password-generator", "security"]
categories = ["cryptography"]
readme = "README.md"

[features]
default = ["precomputed_common_max_powers"]
precomputed_max_powers = ["precomputed_common_max_powers"]
precomputed_common_max_powers = []

[dependencies]
unicode-segmentation = "1.10.0"

[dev-dependencies]
strum = "0.24"
strum_macros = "0.24"
digest = "0.10.5"
md4 = "0.10.2"
md-5 = "0.10.5"
sha-1 = "0.10.0"
sha2 = "0.10.6"
ripemd = "0.1.3"
criterion = "0.4.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[[bench]]
name = "hashrate_32"
harness = false

[[bench]]
name = "hashrate_20"
harness = false

[[bench]]
name = "hashrate_16"
harness = false

[[bench]]
name = "leet"
harness = false
